src/objects/Commission_Entry__c.object
<CustomObject>
    <description>Commission Entry object will contain any opportunity line</description>
    <fields>
        <fullName>Accelerator_Stage_1__c</fullName>
        <formula>Opportunity__r.Accelerator_Stage_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accelerator Stage 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accelerator_Stage_2__c</fullName>
        <formula>Opportunity__r.Accelerator_Stage_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accelerator Stage 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Opportunity__r.AccountId</formula>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Remaining__c</fullName>
        <description>This is the amount of commission that has not been paid out yet.</description>
        <formula>Commission_Amount__c -  Total_Commission_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the amount of commission that has not been paid out yet.</inlineHelpText>
        <label>Commission Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Calculated__c</fullName>
        <label>Date Calculated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_Of_Specialty_Contacts__c</fullName>
        <formula>Opportunity__r.Additional_Specialty_Contacts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Specialty Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Id__c</fullName>
        <label>Opportunity Line Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commission Entries</relationshipLabel>
        <relationshipName>Commission_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Specialty__c</fullName>
        <formula>Text(Opportunity__r.Owner_Specialty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_s_Team__c</fullName>
        <formula>Text(Opportunity__r.Owner_Team__c)</formula>
        <label>Owner&apos;s Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_On_1st_round__c</fullName>
        <description>This is the date when the first part of the commission was paid.</description>
        <inlineHelpText>This is the date when the first part of the commission was paid.</inlineHelpText>
        <label>75% Paid On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_On_2nd_round__c</fullName>
        <description>This is the date when the second part of the commission was paid.</description>
        <inlineHelpText>This is the date when the second part of the commission was paid.</inlineHelpText>
        <label>25% Paid On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_On__c</fullName>
        <description>The date when the full commission amount has been paid at once.</description>
        <inlineHelpText>The date when the full commission amount has been paid at once.</inlineHelpText>
        <label>Paid On (All)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_Complete__c</fullName>
        <description>Indication whether there is still commission that  has not been processed with payroll.</description>
        <formula>Commission_Amount__c == Total_Commission_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indication whether there is still commission that  has not been processed with payroll.</inlineHelpText>
        <label>Payroll Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Stage__c</fullName>
        <inlineHelpText>Opportunity Line Item stage.</inlineHelpText>
        <label>Product Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Commission Entries</relationshipLabel>
        <relationshipName>Commission_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <formula>Text(Opportunity__r.Qualification_Type__c)</formula>
        <label>Qualification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <formula>Opportunity__r.Rate_Type__c</formula>
        <label>Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialty_Contacts_Bonus__c</fullName>
        <description>This number is not added for each opportunity line item. Only one per Opportunity.</description>
        <formula>Opportunity__r.Specialty_Contacts_Bonus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This number is not added for each opportunity line item. Only one per Opportunity.</inlineHelpText>
        <label>Specialty Contacts Bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status field will be changed to close when the related opportunity is closed or re-opened. When status is Closed commission entry will not be editable.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retracted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Commission_Paid__c</fullName>
        <description>This is the total amount of commission that finance team has paid so far.</description>
        <formula>IF(NOT(ISBLANK( Paid_On__c )), Commission_Amount__c,  X25_Commission_Amount_Paid__c +  X75_Commission_Amount_Paid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the total amount of commission that finance team has paid so far.</inlineHelpText>
        <label>Total Commission Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Commission_Amount__c</fullName>
        <formula>Opportunity__r.Total_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X25_Commission_Amount_Paid__c</fullName>
        <formula>IF( NOT(ISBLANK(Paid_On_2nd_round__c)), Commission_Amount__c * 0.25, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>25% Commission Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X75_Commission_Amount_Paid__c</fullName>
        <formula>IF(NOT(ISBLANK( Paid_On_1st_round__c )), Commission_Amount__c * 0.75, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>75% Commission Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Entry</label>
    <listViews>
        <fullName>All_Commisions</fullName>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity_Owner__c</columns>
        <columns>Commission_Amount__c</columns>
        <columns>Paid_On__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Stage__c</columns>
        <columns>Total_Opportunity_Commission_Amount__c</columns>
        <columns>Date_Calculated__c</columns>
        <columns>Owner_s_Team__c</columns>
        <columns>Qualification_Type__c</columns>
        <columns>Accelerator_Stage_1__c</columns>
        <columns>Accelerator_Stage_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Commissions</label>
    </listViews>
    <listViews>
        <fullName>All_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Owner_s_Team__c</columns>
        <columns>Qualification_Type__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Stage__c</columns>
        <columns>Date_Calculated__c</columns>
        <columns>Commission_Amount__c</columns>
        <columns>Total_Commission_Paid__c</columns>
        <columns>Commission_Remaining__c</columns>
        <columns>Paid_On_2nd_round__c</columns>
        <columns>Paid_On_1st_round__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All - Created Today</label>
    </listViews>
    <listViews>
        <fullName>All_Created_Today_Test</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Stage__c</columns>
        <columns>Commission_Amount__c</columns>
        <columns>Total_Commission_Paid__c</columns>
        <columns>Commission_Remaining__c</columns>
        <columns>Paid_On_2nd_round__c</columns>
        <columns>Paid_On_1st_round__c</columns>
        <columns>Paid_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All - Created Today Test</label>
    </listViews>
    <nameField>
        <displayFormat>CE{0000000000}</displayFormat>
        <label>Commission Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Opportunity_Line_item_Id</fullName>
        <active>true</active>
        <description>Validate that Opportunity_Line_Item_Id__c field is 18 characters</description>
        <errorConditionFormula>AND(LEN(Opportunity_Line_Item_Id__c) != 18, LEN(Opportunity_Line_Item_Id__c) != 0)</errorConditionFormula>
        <errorDisplayField>Opportunity_Line_Item_Id__c</errorDisplayField>
        <errorMessage>Filed must be 18 characters long.</errorMessage>
    </validationRules>
</CustomObject>